# World-Android-Test

./: .gitignore  README.md
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hello-jni.cpp  world-example.cpp  world-example.h
